// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallDetails Should match 1`] = `
.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: transparent;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c10:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c10:hover:enabled {
  border-color: #fff;
}

.c10:active:enabled {
  border: 1px solid #303338;
}

.c10:disabled {
  color: #303338;
}

.c6 {
  height: 1.6rem;
  width: 1.6rem;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 1rem 0 0;
  padding: 0;
}

.c1 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c5 {
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  padding: 0.125rem 0.375rem;
  background-color: #303338;
  border-radius: 10px;
}

.c7 {
  border-radius: 50%;
  height: 24px;
  width: 24px;
}

.c8 {
  color: #A1A6B0;
  margin-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover {
  cursor: pointer;
  color: #fff;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  color: #fff;
  margin-top: 0;
  white-space: pre-wrap;
}

.c4 {
  color: #A1A6B0;
  margin: 0;
}

.c13 {
  margin: 0;
  padding: 0;
  color: #fff;
  background-color: transparent;
}

.c9 {
  padding-top: 0.75rem;
}

.c11 {
  font-size: 12px;
  margin: 0;
  padding: 4px 8px;
}

<div>
   
  <div
    class="c0"
  >
    <div
      class="c1 c2 c3"
    >
      interactWith
       
      <span>
        0.0
         
        TST
      </span>
      :
    </div>
    <div
      class="c1 c2"
    >
      <div
        class="c1 c2 c4"
      >
        <span
          class="c5"
        >
          <img
            alt="Avatar"
            class="c6 c7"
            data-testid="avatar"
            size="24"
            src="test"
          />
        </span>
        <a
          class="c8"
          rel="noopener"
          target="_blank"
        >
          test.eth
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
            />
            <path
              d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
  <div
    class="c1 c9"
  >
    <button
      class="c10 c11"
    >
      transfer
       (
      <span>
        <span
          class="c12 c13"
          color="#fff"
        >
          address
        </span>
      </span>
      <span>
        <span>
          , 
        </span>
        <span
          class="c12 c13"
          color="#fff"
        >
          uint256
        </span>
      </span>
      )
    </button>
  </div>
   
</div>
`;

exports[`CallDetails Should match with empty data 1`] = `
.c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  cursor: pointer;
  font-size: 14px;
  border: 1px solid #303338;
  background-color: transparent;
  color: #fff;
  border-radius: 32px;
  padding: 0.5rem 0.8rem;
  margin: 0.2rem;
  width: auto;
}

.c10:disabled {
  color: initial;
  opacity: 0.4;
  cursor: auto;
}

.c10:hover:enabled {
  border-color: #fff;
}

.c10:active:enabled {
  border: 1px solid #303338;
}

.c10:disabled {
  color: #303338;
}

.c6 {
  height: 1.6rem;
  width: 1.6rem;
}

.c0 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0 0 1rem;
  padding: 0;
}

.c1 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c15 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 1rem 0 0;
  padding: 0;
}

.c5 {
  margin-right: 0.5rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  padding: 0.125rem 0.375rem;
  background-color: #303338;
  border-radius: 10px;
}

.c7 {
  border-radius: 50%;
  height: 24px;
  width: 24px;
}

.c8 {
  color: #A1A6B0;
  margin-right: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover {
  cursor: pointer;
  color: #fff;
}

.c14 {
  width: 100%;
  min-width: 200px;
  height: 1px;
  background-color: #303338;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  color: #fff;
  margin-top: 0;
  white-space: pre-wrap;
}

.c4 {
  color: #A1A6B0;
  margin: 0;
}

.c13 {
  margin: 0;
  padding: 0;
  color: #fff;
  background-color: transparent;
}

.c9 {
  padding-top: 0.75rem;
}

.c11 {
  font-size: 12px;
  margin: 0;
  padding: 4px 8px;
}

<div>
   
  <div
    class="c0"
  >
    <div
      class="c1 c2 c3"
    >
      interactWith
       
      <span>
        0.0
         
        TST
      </span>
      :
    </div>
    <div
      class="c1 c2"
    >
      <div
        class="c1 c2 c4"
      >
        <span
          class="c5"
        >
          <img
            alt="Avatar"
            class="c6 c7"
            data-testid="avatar"
            size="24"
            src="test"
          />
        </span>
        <a
          class="c8"
          rel="noopener"
          target="_blank"
        >
          test.eth
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
            />
            <path
              d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
            />
          </svg>
        </a>
      </div>
    </div>
    <div
      class="c1 c9"
    >
      <button
        class="c10 c11"
      >
        approve (
         
        <span
          class="c12 c13"
          color="#fff"
        >
          address
        </span>
        , 
        <span
          class="c12 c13"
          color="#fff"
        >
          uint256
        </span>
         
        )
      </button>
    </div>
  </div>
  <div
    class="c14"
  />
  <div
    class="c15"
  >
    <div
      class="c1 c2 c3"
    >
      interactWith
       
      <span>
        0.0
         
        TST
      </span>
      :
    </div>
    <div
      class="c1 c2"
    >
      <div
        class="c1 c2 c4"
      >
        <span
          class="c5"
        >
          <img
            alt="Avatar"
            class="c6 c7"
            data-testid="avatar"
            size="24"
            src="test"
          />
        </span>
        <a
          class="c8"
          rel="noopener"
          target="_blank"
        >
          test.eth
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m13 3 3.293 3.293-7 7 1.414 1.414 7-7L21 11V3z"
            />
            <path
              d="M19 19H5V5h7l-2-2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-5l-2-2v7z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
  <div
    class="c1 c9"
  >
    <button
      class="c10 c11"
    >
      transfer
       (
      <span>
        <span
          class="c12 c13"
          color="#fff"
        >
          address
        </span>
      </span>
      <span>
        <span>
          , 
        </span>
        <span
          class="c12 c13"
          color="#fff"
        >
          uint256
        </span>
      </span>
      )
    </button>
  </div>
   
</div>
`;
